@@ -1,5 +1,11 @@
 2006-12-14  Matthias Clasen  <mclasen@redhat.com>
 
+	* glib/gconvert.c (open_converter): Don't use alloca
+	and avoid allocating memory for small keys that are 
+	already cached.  (#172406, Morten Welinder)
+
+2006-12-14  Matthias Clasen  <mclasen@redhat.com>
+
 	* glib/gkeyfile.c (g_key_file_add_group): If the group
 	is already there, make it current.  (#385910, Joe Halliwell)
 
